deploy/dev/1-manifest/deployment-rnd-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"labels":{"app":"app","app.kubernetes.io/managed-by":"pulumi","sha":"HEAD","version":"latest"},"name":"app","namespace":"rnd"},"spec":{"selector":{"matchLabels":{"app":"app-pod"}},"template":{"metadata":{"labels":{"app":"app-pod"}},"spec":{"containers":[{"image":"ghcr.io/andersevenrud/microservice-rnd-app:latest","imagePullPolicy":"Always","name":"app"}],"restartPolicy":"Always"}}}}
  labels:
    app: app
    app.kubernetes.io/managed-by: pulumi
    sha: HEAD
    version: latest
  name: app
  namespace: rnd
spec:
  selector:
    matchLabels:
      app: app-pod
  template:
    metadata:
      labels:
        app: app-pod
    spec:
      containers:
      - image: ghcr.io/andersevenrud/microservice-rnd-app:latest
        imagePullPolicy: Always
        name: app
      restartPolicy: Always
