deploy/dev/1-manifest/deployment-rnd-kowl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"labels":{"admin":"kowl","app.kubernetes.io/managed-by":"pulumi"},"name":"kowl","namespace":"rnd"},"spec":{"replicas":1,"selector":{"matchLabels":{"admin":"kowl-pod"}},"template":{"metadata":{"labels":{"admin":"kowl-pod"}},"spec":{"containers":[{"env":[{"name":"KAFKA_BROKERS","value":"kafka:9092"}],"image":"quay.io/cloudhut/kowl:master-ab6caaa","imagePullPolicy":"IfNotPresent","name":"kowl","ports":[{"containerPort":8080}]}],"restartP [...]
  labels:
    admin: kowl
    app.kubernetes.io/managed-by: pulumi
  name: kowl
  namespace: rnd
spec:
  replicas: 1
  selector:
    matchLabels:
      admin: kowl-pod
  template:
    metadata:
      labels:
        admin: kowl-pod
    spec:
      containers:
      - env:
        - name: KAFKA_BROKERS
          value: kafka:9092
        image: quay.io/cloudhut/kowl:master-ab6caaa
        imagePullPolicy: IfNotPresent
        name: kowl
        ports:
        - containerPort: 8080
      restartPolicy: Always
