deploy/dev/1-manifest/statefulset-rnd-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi","backend":"db"},"name":"db","namespace":"rnd"},"spec":{"podManagementPolicy":"Parallel","replicas":1,"selector":{"matchLabels":{"backend":"db-pod"}},"serviceName":"db","template":{"metadata":{"labels":{"backend":"db-pod"}},"spec":{"containers":[{"env":[{"name":"MARIADB_DATABASE","value":"db"},{"name":"MARIADB_PASSWORD","value":"db"},{"name":"MARIADB_ROOT_PASSWORD","value":"db"},{"name [...]
  labels:
    app.kubernetes.io/managed-by: pulumi
    backend: db
  name: db
  namespace: rnd
spec:
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      backend: db-pod
  serviceName: db
  template:
    metadata:
      labels:
        backend: db-pod
    spec:
      containers:
      - env:
        - name: MARIADB_DATABASE
          value: db
        - name: MARIADB_PASSWORD
          value: db
        - name: MARIADB_ROOT_PASSWORD
          value: db
        - name: MARIADB_USER
          value: db
        image: mariadb:10.8
        imagePullPolicy: IfNotPresent
        name: db
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db-data
      restartPolicy: Always
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
