deploy/dev/1-manifest/statefulset-rnd-kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi","backend":"kafka"},"name":"kafka","namespace":"rnd"},"spec":{"podManagementPolicy":"Parallel","replicas":1,"selector":{"matchLabels":{"backend":"kafka-pod"}},"serviceName":"kafka","template":{"metadata":{"labels":{"backend":"kafka-pod"}},"spec":{"containers":[{"env":[{"name":"ALLOW_PLAINTEXT_LISTENER","value":"yes"},{"name":"KAFKA_BROKER_ID","value":"1"},{"name":"KAFKA_CFG_ADVERTISED_ [...]
  labels:
    app.kubernetes.io/managed-by: pulumi
    backend: kafka
  name: kafka
  namespace: rnd
spec:
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      backend: kafka-pod
  serviceName: kafka
  template:
    metadata:
      labels:
        backend: kafka-pod
    spec:
      containers:
      - env:
        - name: ALLOW_PLAINTEXT_LISTENER
          value: "yes"
        - name: KAFKA_BROKER_ID
          value: "1"
        - name: KAFKA_CFG_ADVERTISED_LISTENERS
          value: CLIENT://:9092,EXTERNAL://:9093
        - name: KAFKA_CFG_INTER_BROKER_LISTENER_NAME
          value: CLIENT
        - name: KAFKA_CFG_LISTENERS
          value: CLIENT://:9092,EXTERNAL://:9093
        - name: KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP
          value: CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
        - name: KAFKA_CFG_ZOOKEEPER_CONNECT
          value: zookeeper:2181
        image: bitnami/kafka:3.0.1
        imagePullPolicy: IfNotPresent
        name: kafka
        ports:
        - containerPort: 9092
          name: internal
        - containerPort: 9093
          name: external
        - containerPort: 5555
          name: jmx
        volumeMounts:
        - mountPath: /bitnami/kafka
          name: kafka-data
      restartPolicy: Always
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: kafka-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
