deploy/dev/1-manifest/statefulset-rnd-keycloak-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi","backend":"keycloak-db"},"name":"keycloak-db","namespace":"rnd"},"spec":{"replicas":1,"selector":{"matchLabels":{"backend":"keycloak-db-pod"}},"serviceName":"keycloak-db","template":{"metadata":{"labels":{"backend":"keycloak-db-pod"}},"spec":{"containers":[{"env":[{"name":"POSTGRES_DB","value":"db"},{"name":"POSTGRES_PASSWORD","value":"db"},{"name":"POSTGRES_USER","value":"db"}],"imag [...]
  labels:
    app.kubernetes.io/managed-by: pulumi
    backend: keycloak-db
  name: keycloak-db
  namespace: rnd
spec:
  replicas: 1
  selector:
    matchLabels:
      backend: keycloak-db-pod
  serviceName: keycloak-db
  template:
    metadata:
      labels:
        backend: keycloak-db-pod
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: db
        - name: POSTGRES_PASSWORD
          value: db
        - name: POSTGRES_USER
          value: db
        image: postgres:14.2
        imagePullPolicy: IfNotPresent
        name: keycloak-db
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: keycloak-db-data
      restartPolicy: Always
      volumes:
      - name: keycloak-db-data
        persistentVolumeClaim:
          claimName: keycloak-db-data
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: keycloak-db-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
