deploy/dev/1-manifest/statefulset-rnd-keycloak.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi","backend":"keycloak"},"name":"keycloak","namespace":"rnd"},"spec":{"podManagementPolicy":"Parallel","replicas":1,"selector":{"matchLabels":{"backend":"keycloak-pod"}},"serviceName":"keycloak","template":{"metadata":{"labels":{"backend":"keycloak-pod"}},"spec":{"containers":[{"args":["start-dev"],"env":[{"name":"KEYCLOAK_ADMIN","value":"admin"},{"name":"KEYCLOAK_ADMIN_PASSWORD","value" [...]
  labels:
    app.kubernetes.io/managed-by: pulumi
    backend: keycloak
  name: keycloak
  namespace: rnd
spec:
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      backend: keycloak-pod
  serviceName: keycloak
  template:
    metadata:
      labels:
        backend: keycloak-pod
    spec:
      containers:
      - args:
        - start-dev
        image: quay.io/keycloak/keycloak:18.0.0
        imagePullPolicy: IfNotPresent
        name: keycloak
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /opt/keycloak/data
          name: keycloak-data
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: keycloak-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
