deploy/dev/1-manifest/service-rnd-adminer.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"admin":"adminer","app.kubernetes.io/managed-by":"pulumi"},"name":"adminer","namespace":"rnd"},"spec":{"clusterIP":"None","ports":[{"port":8080}],"selector":{"admin":"adminer-pod"}}}
  labels:
    admin: adminer
    app.kubernetes.io/managed-by: pulumi
  name: adminer
  namespace: rnd
spec:
  clusterIP: None
  ports:
  - port: 8080
  selector:
    admin: adminer-pod
