deploy/dev/1-manifest/service-rnd-app.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app":"app","app.kubernetes.io/managed-by":"pulumi"},"name":"app","namespace":"rnd"},"spec":{"ports":[{"port":8080}],"selector":{"app":"app-pod"},"type":"LoadBalancer"}}
  labels:
    app: app
    app.kubernetes.io/managed-by: pulumi
  name: app
  namespace: rnd
spec:
  ports:
  - port: 8080
  selector:
    app: app-pod
  type: LoadBalancer
