deploy/dev/1-manifest/service-rnd-db.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi","backend":"db"},"name":"db","namespace":"rnd"},"spec":{"ports":[{"port":3306,"targetPort":3306}],"selector":{"backend":"db-pod"}}}
  labels:
    app.kubernetes.io/managed-by: pulumi
    backend: db
  name: db
  namespace: rnd
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    backend: db-pod
