deploy/dev/1-manifest/service-rnd-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi","backend":"kafka"},"name":"kafka","namespace":"rnd"},"spec":{"clusterIP":"None","ports":[{"name":"internal","port":9092},{"name":"external","port":9093}],"selector":{"backend":"kafka-pod"}}}
  labels:
    app.kubernetes.io/managed-by: pulumi
    backend: kafka
  name: kafka
  namespace: rnd
spec:
  clusterIP: None
  ports:
  - name: internal
    port: 9092
  - name: external
    port: 9093
  selector:
    backend: kafka-pod
