deploy/dev/1-manifest/service-rnd-keycloak-db.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi","backend":"keycloak-db"},"name":"keycloak-db","namespace":"rnd"},"spec":{"ports":[{"port":5432}],"selector":{"backend":"keycloak-db-pod"}}}
  labels:
    app.kubernetes.io/managed-by: pulumi
    backend: keycloak-db
  name: keycloak-db
  namespace: rnd
spec:
  ports:
  - port: 5432
  selector:
    backend: keycloak-db-pod
