deploy/dev/1-manifest/service-rnd-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi","backend":"keycloak"},"name":"keycloak","namespace":"rnd"},"spec":{"clusterIP":"None","ports":[{"name":"http","port":8080}],"selector":{"backend":"keycloak-pod"}}}
  labels:
    app.kubernetes.io/managed-by: pulumi
    backend: keycloak
  name: keycloak
  namespace: rnd
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8080
  selector:
    backend: keycloak-pod
