deploy/dev/1-manifest/service-rnd-kowl.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"admin":"kowl","app.kubernetes.io/managed-by":"pulumi"},"name":"kowl","namespace":"rnd"},"spec":{"clusterIP":"None","ports":[{"port":8080}],"selector":{"admin":"kowl-pod"}}}
  labels:
    admin: kowl
    app.kubernetes.io/managed-by: pulumi
  name: kowl
  namespace: rnd
spec:
  clusterIP: None
  ports:
  - port: 8080
  selector:
    admin: kowl-pod
