deploy/dev/1-manifest/service-rnd-zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi","backend":"zookeeper"},"name":"zookeeper","namespace":"rnd"},"spec":{"clusterIP":"None","ports":[{"name":"client","port":2181}],"selector":{"backend":"zookeeper-pod"}}}
  labels:
    app.kubernetes.io/managed-by: pulumi
    backend: zookeeper
  name: zookeeper
  namespace: rnd
spec:
  clusterIP: None
  ports:
  - name: client
    port: 2181
  selector:
    backend: zookeeper-pod
