deploy/dev/1-manifest/ingress-rnd-ingress-mailhog.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"selfsigned-cluster-issuer"},"labels":{"app.kubernetes.io/managed-by":"pulumi","www":"ingress"},"name":"ingress-mailhog","namespace":"rnd"},"spec":{"rules":[{"host":"mailhog.rnd.lvh.me","http":{"paths":[{"backend":{"service":{"name":"mailhog","port":{"number":8025}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["mailhog.rnd.lvh.me"],"secretName":"selfsigned-root-secret" [...]
  labels:
    app.kubernetes.io/managed-by: pulumi
    www: ingress
  name: ingress-mailhog
  namespace: rnd
spec:
  rules:
  - host: mailhog.rnd.lvh.me
    http:
      paths:
      - backend:
          service:
            name: mailhog
            port:
              number: 8025
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mailhog.rnd.lvh.me
    secretName: selfsigned-root-secret
